[tool.poetry]
name = "python-tutorial"
version = "0.1.0"
description = ""
authors = ["rymyung <rymyung@hanmail.net>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
asyncio = "^3.4.3"
aiohttp = "3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
